fix z-index conflict

--- a/components/Header/Menu/Menu.module.scss
+++ b/components/Header/Menu/Menu.module.scss
@@ -12,4 +12,5 @@
     z-index: 10;
     padding: 20px 0;
     border: 2px solid variable.$border-color;
+    z-index: 100;
 }
